--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ html {
   background-color: #c9b5ab;
 }
 
-header h1, h2, {
-  font-family: 'PT Sans', sans-serif;
+header, h1, h2 {
+  font-family: "PT Sans", sans-serif;
+}
+
+main > p, dt {
+  font-family: "PT Serif", sans-serif;
 }
