--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 
 img {
-  width: 100%
+  width: 100%;
 }
 
 header, h1, h2 {
@@ -18,6 +18,31 @@ figcaption {
   font-style: italic;
   text-align: center;
 }
+
+nav {
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+nav ol {
+  list-style-type: none;
+}
+
+nav a {
+  color: #8f2440;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #3f1622;
+  text-decoration: underline;
+}
 main > p, dt {
   font-family: "PT Serif", sans-serif;
+}
+
+.blockquote {
+  font-size: 1.5rem;
+  font-style: italic;
+  text-align: center;
 }
